# college-nm-labs

./: Cargo.toml  README.md  criterion.toml
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: app.rs  lib.rs  main.rs  storage.rs
math/: Cargo.toml
math/benches/: math.rs
math/src/: expression.rs  function.rs  lib.rs  method.rs  ops.rs  parser.rs  term.rs  token.rs  variable.rs
math/src/parser/: token.rs
src/math/: expression.rs  mod.rs  ops.rs  term.rs
src/math/parser/: token.rs
