[package]
name = "nm-labs"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nm-labs-cli"
path = "bin/cli.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
clap = { version = "3.1", optional = true }
itertools = "0.10.3"
smallvec = "1.8.0"
smartstring = "0.2.9"

[profile.final]
inherits = "release"
lto = true
codegen-units = 1
