[package]
name = "nm-gui"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nm-math = { path = "../math" }

eframe = "0.17"
