[package]
name = "nm-math"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"

[dependencies]
smallvec = "1.8"
smartstring = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.3"

[[bench]]
name = "math"
harness = false
